--- a/LibraryBusinessLogicLayer/LibraryBusinessLogicLayer.csproj
+++ b/LibraryBusinessLogicLayer/LibraryBusinessLogicLayer.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryDatabaseAccessLayer\LibraryDatabaseAccessLayer.csproj" />
+  </ItemGroup>
+
 </Project>
