--- a/LibraryCommon/LibraryCommon.csproj
+++ b/LibraryCommon/LibraryCommon.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryWebApp\LibraryWebApp.csproj" />
+  </ItemGroup>
+
 </Project>
