--- a/LibraryUnitTest/LibraryUnitTest.csproj
+++ b/LibraryUnitTest/LibraryUnitTest.csproj
@@ -12,6 +12,14 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryBuisnessLogicLayer\LibraryBuisnessLogicLayer.csproj" />
+    <ProjectReference Include="..\LibraryCommon\LibraryCommon.csproj" />
+    <ProjectReference Include="..\LibraryDatabaseAccessLayer\LibraryDatabaseAccessLayer.csproj" />
+    <ProjectReference Include="..\LibraryWebApp\LibraryWebApp.csproj" />
   </ItemGroup>
 
 </Project>
